Inventory backup data restoration stub
This commit implements stub changes in wait-vpd-parsers service to check
for inventory backup data and restore it if found. On systems with
redundant BMCs, inventory data will be synced from Active BMC to Passive
BMC by other service at a specific file path. When the old Passive BMC
is transitioning to Active, it needs to check for the backup data,
restore it and restart the inventory manager service. This commit only
includes stub changes, and actual changes will be handled in future
commits.

Change-Id: I1d22a4069614bed441b1b31fc02bc17c5279a5c8
Signed-off-by: Souvik Roy <souvikroyofficial10@gmail.com>

--- a/wait-vpd-parser/meson.build
+++ b/wait-vpd-parser/meson.build
@@ -19,6 +19,7 @@ sources = [
     'src/wait_vpd_parser.cpp',
     '../vpd-manager/src/logger.cpp',
     'src/prime_inventory.cpp',
+    'src/inventory_backup_handler.cpp',
 ]
 
 wait_vpd_parser_exe = executable(
