--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,7 @@ if get_option('ibm_system').allowed()
     services += [
         'service_files/system-vpd.service',
         'service_files/wait-vpd-parsers.service',
+        'service_files/active-to-passive.service',
     ]
 
     package_datadir = join_paths('share', 'vpd')
