1210-ghe:huygens:Dependency fix
- set spi mux needs to run before vpd collection is done for CFAM access

Change-Id: I5272ef5613f41925906cf0d4c3f170129826ad4c
Signed-off-by: Jinu Joy Thomas <jinu.joy.thomas@in.ibm.com>

--- a/service_files/wait-vpd-parsers.service
+++ b/service_files/wait-vpd-parsers.service
@@ -5,7 +5,7 @@
 Description=Wait for VPD Collection Services to complete
 Wants=vpd-manager.service
 After=vpd-manager.service
-#After=set-spi-mux.service
+After=set-spi-mux.service
 
 [Service]
 ExecStart=/usr/bin/wait-vpd-parser
