Update wait-vpd-parser service file
This commit updates the service file for wait-vpd-parsers to make
the service start as part of multi-user.target. For redundant BMC
systems, wait-vpd-parsers service should run on Active BMC as a part of
obmc-bmc-active.target. This is taken care of in the bitbake recipe file
changes. For other systems, wait-vpd-parsers service should run after
system VPD collection and as a part of multi-user.target

Change-Id: Iea5da243ef30e71fcd159b7972d7019e5366e098
Signed-off-by: Souvik Roy <souvikroyofficial10@gmail.com>

--- a/service_files/wait-vpd-parsers.service
+++ b/service_files/wait-vpd-parsers.service
@@ -12,6 +12,4 @@ ExecStart=/usr/bin/wait-vpd-parser
 Type=oneshot
 
 [Install]
-# TODO revert the below
-#WantedBy=multi-user.target
-WantedBy=basic.target
+WantedBy=multi-user.target
